--- a/layouts/partials/hero.html
+++ b/layouts/partials/hero.html
@@ -3,7 +3,7 @@
     <div class="header-content">
         <div class="header-content-inner">
             {{ with .Site.Params.hero.slogan }}
-                <h1>{{ . | markdownify  }}</h1>
+                <h1>Charlotte Wray</h1>
             {{ end }}
             {{ if and .Site.Params.hero.slogan .Site.Params.hero.subtitle }}
                 <hr>
