--- a/layouts/partials/services.html
+++ b/layouts/partials/services.html
@@ -17,42 +17,13 @@
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
                     <i class="fa fa-4x {{ .icon }} wow bounceIn text-primary"></i>
-                    <h3>Studing interaction design – University</h3>
+                    <h3>{{ .title }}</h3>
                     {{ with .description }}
-                        <p class="text-muted">Completing an IxD mobile app project focusing on an airport traveller's journey.</p>
+                        <p class="text-muted">{{ . }}</p>
                     {{ end }}
                 </div>
             </div>
 
-            <div class="col-lg-3 col-md-6 text-center">
-                <div class="service-box">
-                    <i class="fa fa-4x {{ .icon }} wow bounceIn text-primary"></i>
-                    <h3>Graphic design – Fujifilm</h3>
-                    {{ with .description }}
-                        <p class="text-muted">Refining and learning core principles in visual design for a vareity of materials. </p>
-                    {{ end }}
-                </div>
-            </div>
-
-            <div class="col-lg-3 col-md-6 text-center">
-                <div class="service-box">
-                    <i class="fa fa-4x {{ .icon }} wow bounceIn text-primary"></i>
-                    <h3>Web development and design – Fujifilm</h3>
-                    {{ with .description }}
-                        <p class="text-muted">Begin developing web pages for products and campaigns; design and coding.</p>
-                    {{ end }}
-                </div>
-            </div>
-
-            <div class="col-lg-3 col-md-6 text-center">
-                <div class="service-box">
-                    <i class="fa fa-4x {{ .icon }} wow bounceIn text-primary"></i>
-                    <h3>Graphics and UI design – Fujifilm</h3>
-                    {{ with .description }}
-                        <p class="text-muted">Lead designer on the visual design of campaigns and the user's digital journey.</p>
-                    {{ end }}
-                </div>
-            </div>
             {{ end }}
         </div>
     </div>
