--- a/layouts/partials/about.html
+++ b/layouts/partials/about.html
@@ -2,20 +2,20 @@
 <section class="bg-primary" id="about">
     <div class="container">
         <div class="row">
-            <div class="col-lg-8 col-lg-offset-2 text-center">
-                {{ with .Site.Params.about.headline }}
-                    <h2 class="section-heading">Introduction</h2>
-                {{ end }}
-                {{ if and .Site.Params.about.headline .Site.Params.about.description }}
-                    <hr class="light">
-                {{ end }}
-                {{ with .Site.Params.about.description }}
-                    <p class="text-faded">Hi I'm Charlotte, I love creating great looking graphics and delving into the world of building user experiences.</p>
-                {{ end }}
-                {{ with .Site.Params.about.buttonText }}
-                    <a href="#portfolio" class="btn btn-default btn-xl">See my work</a>
-                {{ end }}
-            </div>
+          <div class="col-lg-8 col-lg-offset-2 text-center">
+              {{ with .Site.Params.about.headline }}
+                  <h2 class="section-heading">{{ . }}</h2>
+              {{ end }}
+              {{ if and .Site.Params.about.headline .Site.Params.about.description }}
+                  <hr class="light">
+              {{ end }}
+              {{ with .Site.Params.about.description }}
+                  <p class="text-faded">{{ . | markdownify }}</p>
+              {{ end }}
+              {{ with .Site.Params.about.buttonText }}
+                  <a href="#" class="btn btn-default btn-xl">{{ . }}</a>
+              {{ end }}
+          </div>
         </div>
     </div>
 </section>
