--- a/layouts/partials/contact.html
+++ b/layouts/partials/contact.html
@@ -4,7 +4,7 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 text-center">
                 {{ with .Site.Params.contact.headline }}
-                    <h2 class="Work inquiry, question or something else?" <a href="mailto:me@charlottewray.co.uk">Email Us</a>></h2>
+                    <h2 class="section-heading">{{ . }}</h2>
                 {{ end }}
                 {{ if and .Site.Params.contact.headline .Site.Params.contact.description }}
                     <hr class="primary">
@@ -13,8 +13,6 @@
                     <p>{{ . | markdownify }}</p>
                 {{ end }}
             </div>
-
-
             {{ if .Site.Params.contact.phone }}
                 <div class="
                 {{ if .Site.Params.contact.email }}
@@ -27,7 +25,6 @@
                     <p>{{ .Site.Params.contact.phone }}</p>
                 </div>
             {{ end }}
-
             {{ if .Site.Params.contact.email }}
                 <div class="
                 {{ if .Site.Params.contact.phone }}
@@ -40,7 +37,6 @@
                     <p><a href="mailto:{{ .Site.Params.contact.email }}">{{ .Site.Params.contact.email }}</a></p>
                 </div>
             {{ end }}
-            
         </div>
     </div>
 </section>
