--- a/static/css/creative.css
+++ b/static/css/creative.css
@@ -108,7 +108,7 @@ aside {
 
 .navbar-default .nav > li>a,
 .navbar-default .nav>li>a:focus {
-    text-transform: uppercase;
+    text-transform: inherit;
     font-size: 13px;
     font-weight: 700;
     color: #222;
@@ -132,7 +132,7 @@ aside {
 
 @media(min-width:768px) {
     .navbar-default {
-        border-color: rgba(255,255,255,.3);
+        border-color: rgba(0,0,0,.3);
         background-color: transparent;
     }
 
@@ -199,7 +199,7 @@ header .header-content {
     position: relative;
     width: 100%;
     padding: 100px 15px;
-    text-align: center;
+    text-align: left;
 }
 
 header .header-content .header-content-inner h1 {
@@ -215,9 +215,9 @@ header .header-content .header-content-inner hr {
 
 header .header-content .header-content-inner p {
     margin-bottom: 50px;
-    font-size: 64px;
+    font-size: 16px;
     font-weight: 300;
-    color: rgba(0,0,0,.7);
+    color: rgba(0,0,0,1);
 }
 
 @media(min-width:768px) {
@@ -237,14 +237,14 @@ header .header-content .header-content-inner p {
     header .header-content .header-content-inner {
         margin-right: auto;
         margin-left: auto;
-        max-width: 1200px;
+        max-width: 1000px;
     }
 
     header .header-content .header-content-inner p {
         margin-right: auto;
         margin-left: auto;
-        max-width: 95%;
-        font-size: 18px;
+        max-width: 100%;
+        font-size: 72px;
     }
 }
 
