--- a/layouts/partials/about.html
+++ b/layouts/partials/about.html
@@ -1,8 +1,8 @@
 {{ "<!-- ABOUT -->" | safeHTML }}
 <section class="bg-primary" id="about">
-    <div class="container">
+    <div class="container section-padding">
         <div class="row">
-          <div class="col-lg-8 col-lg-offset-2 text-center">
+          <div class="col-lg-8 col-lg-offset-2 text-left">
               {{ with .Site.Params.about.headline }}
                   <h2 class="section-heading">{{ . }}</h2>
               {{ end }}
