--- a/layouts/partials/about.html
+++ b/layouts/partials/about.html
@@ -1,6 +1,6 @@
 {{ "<!-- ABOUT -->" | safeHTML }}
 <section class="bg-primary" id="about">
-    <div class="container section-padding">
+    <div class="container">
         <div class="row">
           <div class="col-lg-8 col-lg-offset-2 text-left">
               {{ with .Site.Params.about.headline }}
