--- a/layouts/partials/about.html
+++ b/layouts/partials/about.html
@@ -4,13 +4,13 @@
         <div class="row">
           <div class="col-lg-8 col-lg-offset-2 text-left">
               {{ with .Site.Params.about.headline }}
-                  <h2 class="section-heading">{{ . }}</h2>
+                  <h4 class="section-heading">{{ . }}</h4>
               {{ end }}
               {{ if and .Site.Params.about.headline .Site.Params.about.description }}
-                  <hr class="light">
+                <!--  <hr class="light"> -->
               {{ end }}
               {{ with .Site.Params.about.description }}
-                  <p class="text-faded">{{ . | markdownify }}</p>
+                  <p class="text-faded textbold">{{ . | markdownify }}</p>
               {{ end }}
               {{ with .Site.Params.about.buttonText }}
                   <a href="#" class="btn btn-default btn-xl">{{ . }}</a>
