--- a/layouts/partials/about.html
+++ b/layouts/partials/about.html
@@ -12,6 +12,21 @@
               {{ with .Site.Params.about.description }}
                   <p class="text-faded textbold">{{ . | markdownify }}</p>
               {{ end }}
+
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-lg-8 col-lg-offset-2 text-left">
+              {{ with .Site.Params.about.headline }}
+                  <h4 class="section-heading">My focus</h4>
+              {{ end }}
+              {{ if and .Site.Params.about.headline .Site.Params.about.description }}
+                <!--  <hr class="light"> -->
+              {{ end }}
+              {{ with .Site.Params.about.description }}
+                  <p class="text-faded textbold">Experience is everything: To design functional digital experiences that engage with the user and deliver effective journeys.</p>
+              {{ end }}
               {{ with .Site.Params.about.buttonText }}
                   <a href="#" class="btn btn-default btn-xl">{{ . }}</a>
               {{ end }}
