--- a/static/css/creative.css
+++ b/static/css/creative.css
@@ -57,8 +57,10 @@ h6 {
 h4 {
   font-size: 16px;
   color: #828282;
-  font-weight: 300;
+  font-weight: 400;
   text-transform: uppercase;
+  letter-spacing: 2px;
+  margin-bottom: 24px;
 }
 
 p {
