--- a/layouts/partials/about.html
+++ b/layouts/partials/about.html
@@ -1,8 +1,13 @@
 {{ "<!-- ABOUT -->" | safeHTML }}
 <section class="bg-primary" id="about">
     <div class="container">
+
+
         <div class="row">
           <div class="col-lg-8 col-lg-offset-2 text-left">
+
+            <img class="img-fluid" src="/img/profile-pic.jpg" alt="icon">
+
               {{ with .Site.Params.about.headline }}
                   <h4 class="section-heading">{{ . }}</h4>
               {{ end }}
