--- a/layouts/partials/about.html
+++ b/layouts/partials/about.html
@@ -2,11 +2,13 @@
 <section class="bg-primary" id="about">
     <div class="container">
 
-
         <div class="row">
-          <div class="col-lg-8 col-lg-offset-2 text-left">
 
+          <div class="col-lg-12">
             <img class="img-fluid" src="/img/profile-pic.jpg" alt="icon">
+          </div>
+
+          <div class="col-lg-8 col-lg-offset-2 text-left">
 
               {{ with .Site.Params.about.headline }}
                   <h4 class="section-heading">{{ . }}</h4>
@@ -19,9 +21,7 @@
               {{ end }}
 
           </div>
-        </div>
 
-        <div class="row">
           <div class="col-lg-8 col-lg-offset-2 text-left">
               {{ with .Site.Params.about.headline }}
                   <h4 class="section-heading">My focus</h4>
