--- a/layouts/partials/services.html
+++ b/layouts/partials/services.html
@@ -1,30 +1,40 @@
 {{ "<!-- SERVICES -->" | safeHTML }}
-<section id="services">
+<section id="services" class="services-padding">
     {{ with .Site.Params.services.headline }}
         <div class="container">
             <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">My journey to UI</h2>
-                    <hr class="primary">
+                <div class="col-lg-8 col-lg-offset-2 header-padding">
+                    <h4 class="section-heading">How I got here</h4>
+                    <h5 class="section-heading">My journey to UI</h5>
 
                 </div>
             </div>
         </div>
     {{ end }}
     <div class="container">
+      {{ range .Site.Params.services.list }}
+
         <div class="row">
-            {{ range .Site.Params.services.list }}
-            <div class="col-lg-3 col-md-6 text-center">
-                <div class="service-box">
-                    <i class="fa fa-4x {{ .icon }} wow bounceIn text-primary"></i>
-                    <h3>{{ .title }}</h3>
+
+            <div class="col-lg-4 col-lg-offset-1 col-md-6 text-right">
+                <div class="service-textbox">
+                    <h6>{{ .date }}</h6>
+                    <h5>{{ .title }}</h5>
                     {{ with .description }}
                         <p class="text-muted">{{ . }}</p>
                     {{ end }}
                 </div>
             </div>
 
-            {{ end }}
+            <div class="col-lg-3 col-md-6">
+                <div class="">
+                    <img class="img-fluid img-circle wow bounceIn text-primary" src="{{ .icon }}" alt="icon">
+                </div>
+                <div class="vl wow fadeInUp"></div>
+            </div>
+
         </div>
+        {{ end }}
+
     </div>
 </section>
