--- a/layouts/partials/aside.html
+++ b/layouts/partials/aside.html
@@ -1,10 +1,10 @@
 {{ "<!-- ASIDE -->" | safeHTML }}
 <aside class="bg-dark">
-    <div class="container text-center">
+    <div class="container text-left">
         <div class="call-to-action">
-            {{ with .Site.Params.aside.headline }}<h2>{{ . }}</h2>{{ end }}
+            {{ with .Site.Params.aside.headline }}<h4>{{ . }}</h4>{{ end }}
             {{ if and .Site.Params.aside.button.link .Site.Params.aside.button.text }}
-                <a href="{{ .Site.Params.aside.button.link }}" class="btn btn-default btn-xl wow tada">{{ .Site.Params.aside.button.text }}</a>
+                <a href="{{ .Site.Params.aside.button.link }}" class="btn btn-primary btn-xl wow tada">{{ .Site.Params.aside.button.text }}</a>
             {{ end }}
         </div>
     </div>
