--- a/layouts/partials/services.html
+++ b/layouts/partials/services.html
@@ -16,7 +16,7 @@
 
         <div class="row">
 
-            <div class="col-lg-4 col-lg-offset-1 col-md-6 text-right">
+            <div class="col-lg-5 col-md-6 text-right">
                 <div class="service-textbox">
                     <h6>{{ .date }}</h6>
                     <h5>{{ .title }}</h5>
